--- a/week3/angular-directives/index-bootstrap.html
+++ b/week3/angular-directives/index-bootstrap.html
@@ -1,13 +1,23 @@
 <html ng-app="SuperHeros">
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular.js"></script>
         <script src="avengers.js"></script>
+        <style>
+            #addHero {
+                width: 400px;
+            }
+        </style>
+
     </head>
     <body>
         <div ng-controller="TheAvengers as avengers">
             <h1>{{ avengers.title }}</h1>
-            <input type="text" ng-model="avengers.newAvenger" placeholder="Add your hero!"/>
-            <button ng-click="avengers.addNewHero()">Add</button>
+            <form class="form-inline">
+                <input id="addHero" class="form-control" type="text" ng-model="avengers.newAvenger" placeholder="Add your hero!"/>
+                <button class="btn btn-primary" ng-click="avengers.addNewHero()">Add</button>
+            </form>
             <ol>
                 <li ng-repeat="avenger in avengers.heroes">{{ avenger }}</li>
                 <!-- <li>{{ avengers.newAvenger }}</li> -->
