--- a/week3/angular-filters-factories/cheesecake/index.html
+++ b/week3/angular-filters-factories/cheesecake/index.html
@@ -6,10 +6,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-    	<!-- <script type="text/javascript" src="app.js"></script> -->
-        <!-- <script type="text/javascript" src="app.controllers.menu.js"></script> -->
-        <!-- <script type="text/javascript" src="app.controllers.pos.js"></script> -->
-        <!-- <script type="text/javascript" src="app.factories.cheesecake.js"></script> -->
+    	<script src="app.js"></script>
+        <script src="app.controller.menu.js"></script>
+        <script src="app.controller.pos.js"></script>
+        <script src="app.factory.cheesecake.js"></script>
         <style>
 
         </style>
