--- a/week3/angular-filters-factories/cheesecake/index.html
+++ b/week3/angular-filters-factories/cheesecake/index.html
@@ -14,5 +14,12 @@
 
         </style>
     </head>
-    <body class="container"></body>
+    <body class="container">
+        <div ng-controller="MenuController as Menu">
+
+        </div>
+        <div ng-controller="MenuOrderController as MenuOrder">
+
+        </div>
+    </body>
 </html>
