--- a/week4/intro-oop/index.html
+++ b/week4/intro-oop/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <script type="text/javascript" src="main.js"></script>
-<script type="text/javascript" src="challengeI.js"></script>
+<script type="text/javascript" src="challenges.js"></script>
 
 </body>
 </html>
