--- a/week4/breakouts/error-handling/index.html
+++ b/week4/breakouts/error-handling/index.html
@@ -7,6 +7,8 @@
     </head>
     <!-- Controller name must match sting in aap.js when initializing controllers! -->
     <body ng-controller="ChuckingAwesomeController as chuck">
-
+        <h1>{{ chuck.title }}</h1>
+        <button type="button">New Quote</button>
+        <p>{{ chuck.quote }}</p>
     </body>
 </html>
