--- a/week6/breakout/public/html/main.html
+++ b/week6/breakout/public/html/main.html
@@ -14,7 +14,7 @@
 	<script src="/js/app.controller.home.js" type="text/javascript"></script>
 
 </head>
-<body ng-controller"homeController as hCtrl">
+<body ng-controller="homeController as hCtrl">
 	<h1>Welcome to Vice City</h1>
 	<h4>{{hCtrl.welcomeMessage}}</h4>
 
