--- a/week6/apis-part-2/public/html/pallet.html
+++ b/week6/apis-part-2/public/html/pallet.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="OakExpress">
     <head>
         <title>Welcome to Pallet Town!</title>
         <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.css">
     	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular.js"></script>
         <script src="/scripts/porkymans.js"></script>
         <style>
-
+            .form-control {
+                width: 200px;
+            }
         </style>
     </head>
-    <body>
-        <h1>Hello squirrel from pallet town!</h1>
+    <body ng-controller="Pokedex as dex">
+        <h1>{{ dex.currentUrl }}</h1>
+        <h2>Hello squirrel from pallet town!</h2>
+
+        <form class="form-inline" ng-submit="dex.submit()">
+            <input class="form-control" type="text" ng-model="dex.pokemonName" placeholder="Enter your Porkyman">
+            <button class="btn btn-info" type="submit">Catch him!</button>
+        </form>
+
+        <section id="results">
+            <ul>
+                <li>{{ dex.currentPokemon.name }}</li>
+            </ul>
+            <button class="btn btn-primary" ng-click="dex.getChain()">Evolve {{
+                dex.currentPokemon.evolvesTo
+            }}</button>
+        </section>
     </body>
 </html>
