added angular scripts

--- a/week7/heroes-of-ajax/public/index.html
+++ b/week7/heroes-of-ajax/public/index.html
@@ -4,6 +4,11 @@
         <title>Heroes of AJAX!</title>
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular.js"></script>
+
+        <script src="app.module.js"></script>
+        <script src="app.controller.heroes.js"></script>
+        <script src="app.factory.api.js"></script>
+
     </head>
     <body class="container">
         
