--- a/week7/heroes-of-ajax/public/index.html
+++ b/week7/heroes-of-ajax/public/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="HeroesOfAjax">
     <head>
         <title>Heroes of AJAX!</title>
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular.js"></script>
 
-        <script src="app.module.js"></script>
-        <script src="app.controller.heroes.js"></script>
-        <script src="app.factory.api.js"></script>
+        <script src="/scripts/app.module.js"></script>
+        <script src="/scripts/app.controller.heroes.js"></script>
+        <script src="/scripts/app.factory.api.js"></script>
 
     </head>
-    <body class="container">
+    <body ng-controller="heroesController as hCtrl" class="container">
         
+
+        <form>
+            <input class="form-control" ng-model="hCtrl.newHero.name" placeholder="Name">
+
+            <input class="form-control" ng-model="hCtrl.newHero.powers"
+            placeholder="Power">
+
+            <input class="form-control" ng-model="hCtrl.newHero.weaknesses"
+            placeholder="Weakness">
+
+            <input class="form-control" type="checkbox" ng-model="hCtrl.newHero.masked">
+
+            <input class="form-control" ng-model="hCtrl.newHero.origin"
+            placeholder="Origin">
+
+            <input type="submit">
+        </form>
+
+
     </body>
 </html>
