--- a/week7/heroes-of-ajax/public/index.html
+++ b/week7/heroes-of-ajax/public/index.html
@@ -11,7 +11,7 @@
 
     </head>
     <body ng-controller="heroesController as hCtrl" class="container">
-        
+        <!--{{hCtrl.hqList}}-->
         <h1>Hero Form</h1>
         <form ng-submit="hCtrl.makeAHero()">
             <input class="form-control" ng-model="hCtrl.newHero.name" placeholder="Name">
@@ -26,6 +26,15 @@
 
             <input class="form-control" ng-model="hCtrl.newHero.origin"
             placeholder="Origin">
+
+            <select 
+            ng-model="hCtrl.newHero.headquarters" class="form-control" 
+            ng-options="hq._id as hq.name for hq in hCtrl.hqList"
+            >
+            <!--VALUE as DISPLAY for OBJ in LIST-->
+                <option value="" selected disabled>Choose HQ</option>
+
+            </select>
 
             <input type="submit">
 
