--- a/week7/heroes-of-ajax/public/index.html
+++ b/week7/heroes-of-ajax/public/index.html
@@ -27,6 +27,12 @@
             <input class="form-control" ng-model="hCtrl.newHero.origin"
             placeholder="Origin">
 
+
+            <label>
+                Quick Commit
+                <input type="radio">
+            </label>
+
             <input type="submit">
 
             <div ng-click="hCtrl.pwExtra('powers')" class="btn btn-info"> Add Power </div>
