--- a/week7/heroes-of-ajax/public/index.html
+++ b/week7/heroes-of-ajax/public/index.html
@@ -57,7 +57,7 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <h1>Our Heroes : </h1>
+            <h1>Heroes List : </h1>
         </div>
         <div ng-repeat="hero in hCtrl.heroList" class="col-xs-12">
             {{ hero.name }}
